envío de email y ejecución de pruebas y correcciones

--- a/AMT/AccederCitasAMT.xaml
+++ b/AMT/AccederCitasAMT.xaml
@@ -95,7 +95,7 @@
       <AssemblyReference>System.Linq.Expressions</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
-  <Sequence DisplayName="AccederCitasAMT" sap:VirtualizedContainerService.HintSize="1856.6666666666667,933.3333333333334" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence DisplayName="AccederCitasAMT" sap:VirtualizedContainerService.HintSize="1578,949.3733333333332" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <sap:WorkflowViewStateService.ViewState>
       <scg:Dictionary x:TypeArguments="x:String, x:Object">
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -119,7 +119,7 @@
                 </ActivityAction.Argument>
                 <uix:NCheckState DisplayName="Check App State - Carga de página" EnableIfExists="False" sap:VirtualizedContainerService.HintSize="400,313.3333333333333" sap2010:WorkflowViewState.IdRef="NCheckState_1" ScopeIdentifier="29d6fcb6-0942-41c5-b26c-b02b387573b0" Timeout="5" Version="V4">
                   <uix:NCheckState.IfNotExists>
-                    <Throw sap:VirtualizedContainerService.HintSize="334,92" sap2010:WorkflowViewState.IdRef="Throw_1">
+                    <Throw DisplayName="Throw - No se pudo acceder a la página" sap:VirtualizedContainerService.HintSize="334,92" sap2010:WorkflowViewState.IdRef="Throw_1">
                       <InArgument x:TypeArguments="s:Exception">
                         <CSharpValue x:TypeArguments="s:Exception" sap2010:WorkflowViewState.IdRef="CSharpValue`1_1">new Exception("No se ha podido acceder a la página de Consulta Citaciones AMT.")</CSharpValue>
                       </InArgument>
