inserción resultado en bdd, pruebas y mejoras

--- a/AMT/ConsultarCitasAMT.xaml
+++ b/AMT/ConsultarCitasAMT.xaml
@@ -113,7 +113,7 @@
       <AssemblyReference>System.Runtime.Numerics</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
-  <Sequence DisplayName="ConsultarCitasAMT" sap:VirtualizedContainerService.HintSize="1730,1924" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence DisplayName="ConsultarCitasAMT" sap:VirtualizedContainerService.HintSize="1730,1926.6666666666667" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <Sequence.Variables>
       <Variable x:TypeArguments="x:String" Name="strErrorLogin" />
     </Sequence.Variables>
@@ -129,13 +129,13 @@
         </InArgument>
       </ui:LogMessage.Message>
     </ui:LogMessage>
-    <uix:NApplicationCard AttachMode="ByInstance" CloseMode="Never" DisplayName="Use Browser - Citas multas AMT " HealingAgentBehavior="Job" sap:VirtualizedContainerService.HintSize="1730,1557.3333333333333" sap2010:WorkflowViewState.IdRef="NApplicationCard_2" InteractionMode="DebuggerApi" OpenMode="IfNotOpen" ScopeGuid="29d6fcb6-0942-41c5-b26c-b02b387573b0" Version="V2" WindowResize="Maximize">
+    <uix:NApplicationCard AttachMode="ByInstance" CloseMode="Never" DisplayName="Use Browser - Citas multas AMT " HealingAgentBehavior="Job" sap:VirtualizedContainerService.HintSize="1730,1560" sap2010:WorkflowViewState.IdRef="NApplicationCard_2" InteractionMode="DebuggerApi" OpenMode="IfNotOpen" ScopeGuid="29d6fcb6-0942-41c5-b26c-b02b387573b0" Version="V2" WindowResize="Maximize">
       <uix:NApplicationCard.Body>
         <ActivityAction x:TypeArguments="x:Object">
           <ActivityAction.Argument>
             <DelegateInArgument x:TypeArguments="x:Object" Name="WSSessionData" />
           </ActivityAction.Argument>
-          <Sequence DisplayName="Consulta" sap:VirtualizedContainerService.HintSize="1696,1306" sap2010:WorkflowViewState.IdRef="Sequence_13">
+          <Sequence DisplayName="Consulta" sap:VirtualizedContainerService.HintSize="1696,1308.6666666666667" sap2010:WorkflowViewState.IdRef="Sequence_13">
             <sap:WorkflowViewStateService.ViewState>
               <scg:Dictionary x:TypeArguments="x:String, x:Object">
                 <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -375,11 +375,7 @@
                 <uix:NCheckState.IfNotExists>
                   <Sequence DisplayName="Action" sap:VirtualizedContainerService.HintSize="504,730.6666666666666" sap2010:WorkflowViewState.IdRef="Sequence_23">
                     <Sequence.Variables>
-                      <Variable x:TypeArguments="x:Double" Name="douDelayAfter">
-                        <Variable.Default>
-                          <Literal x:TypeArguments="x:Double" Value="2" />
-                        </Variable.Default>
-                      </Variable>
+                      <Variable x:TypeArguments="x:Double" Default="2" Name="douDelayAfter" />
                     </Sequence.Variables>
                     <sap:WorkflowViewStateService.ViewState>
                       <scg:Dictionary x:TypeArguments="x:String, x:Object">
@@ -447,7 +443,7 @@
                   </Sequence>
                 </uix:NCheckState.IfNotExists>
                 <uix:NCheckState.Target>
-                  <uix:TargetAnchorable BrowserURL="servicios.axiscloud.ec/AutoServicio/inicio.jsp" CVScreenId="b7870faa-0700-4fe9-a763-60ccd1c46a3c" CvTextArea="1847, 587, 52, 21" CvTextArgument="$0.00" CvType="Text" DesignTimeRectangle="1850, 582, 50, 26" DesignTimeScaleFactor="1.5" ElementType="Text" FullSelectorArgument="&lt;webctrl id='iframe_descripcion' tag='IFRAME' /&gt;&lt;webctrl tag='TABLE' /&gt;&lt;webctrl tableRow='9' tag='STRONG' /&gt;" FuzzySelectorArgument="&lt;webctrl id='iframe_descripcion' tag='IFRAME' /&gt;&lt;webctrl tag='TABLE' /&gt;&lt;webctrl type='' tag='STRONG' class='' aaname='$0.00' check:innerText='$0.00' /&gt;" Guid="65cd6292-3a48-43db-a4d4-b38fcb3bc607" InformativeScreenshot="670f2a590523f8ff67acd04f826531a5.png" ScopeSelectorArgument="&lt;html app='chrome.exe' title='Servicios en Línea' /&gt;" SearchSteps="Selector, FuzzySelector, CV" Version="V5" Visibility="Interactive">
+                  <uix:TargetAnchorable BrowserURL="servicios.axiscloud.ec/AutoServicio/inicio.jsp" CVScreenId="b7870faa-0700-4fe9-a763-60ccd1c46a3c" CvTextArea="1847, 587, 52, 21" CvTextArgument="$0.00" CvType="Text" DesignTimeRectangle="1850, 582, 50, 26" DesignTimeScaleFactor="1.5" ElementType="Text" FullSelectorArgument="&lt;webctrl id='iframe_descripcion' tag='IFRAME' /&gt;&lt;webctrl tag='TABLE' /&gt;&lt;webctrl tableRow='9' tag='STRONG' innertext='$0.00' aaname='$0.00' /&gt;" FuzzySelectorArgument="&lt;webctrl id='iframe_descripcion' tag='IFRAME' /&gt;&lt;webctrl tag='TABLE' /&gt;&lt;webctrl type='' tag='STRONG' innertext='$0.00' aaname='$0.00' class='' check:text='$0.00' /&gt;" Guid="65cd6292-3a48-43db-a4d4-b38fcb3bc607" InformativeScreenshot="670f2a590523f8ff67acd04f826531a5.png" ScopeSelectorArgument="&lt;html app='chrome.exe' title='Servicios en Línea' /&gt;" SearchSteps="Selector, FuzzySelector, CV" Version="V5" Visibility="Interactive">
                     <uix:TargetAnchorable.Anchors>
                       <scg:List x:TypeArguments="uix:ITarget" Capacity="4">
                         <uix:Target CVScreenId="b7870faa-0700-4fe9-a763-60ccd1c46a3c" CvTextArea="981, 588, 177, 18" CvTextArgument="TOTAL PENDIENTE:" CvType="Text" DesignTimeRectangle="984, 580, 786, 30" ElementType="Text" FullSelectorArgument="&lt;webctrl id='iframe_descripcion' tag='IFRAME' /&gt;&lt;webctrl tag='TABLE' /&gt;&lt;webctrl id='th_totalPendiente' tableRow='9' tag='TH' /&gt;" FuzzySelectorArgument="&lt;webctrl id='iframe_descripcion' tag='IFRAME' /&gt;&lt;webctrl tag='TABLE' /&gt;&lt;webctrl id='th_totalPendiente' type='' tag='TH' class='m-0 p-0 ' aaname='TOTAL PENDIENTE:' check:innerText='TOTAL PENDIENTE:' /&gt;" Guid="b7a61801-1ff3-4b28-bd92-d7d0c30c542a" SearchSteps="Selector, FuzzySelector, CV" />
